$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-08-12 [O] Disallowed zero as possible value for number of login attempts option {GauGau}
2009-08-06 [A] Added plugin hooks 'smilies_display' & 'smilies_process' {eenemeenemuu}
2009-08-04 [B] Fixed sloppy coding in album manager {GauGau}
2009-08-03 [B] Fixed user manager pagination (thread ID 60871) {Nibbler}
2009-07-29 [B] Removed unneeded <head>-section that caused 404 error for inline-help (thread ID 60847) {GauGau}
2009-07-25 [D] Fixed reference to plugins folder (thread ID 60772) {GauGau}
2009-07-24 [M] Updated version count from cpg1.5.1 to cpg1.5.2 to prepare the next release {GauGau}
2009-07-24 [S] Release of cpg1.5.1 (alpha) to closed user group {GauGau}
2009-07-22 [B] Fixing 'browse by date' function (thread ID 60694) {Nibbler}
2009-07-14 [B] Only display custom user profile fields if corresponding config option is populated {GauGau}
2009-07-13 [D] Updated testing instructions as a preparation for the first release to the testers {GauGau}
2009-07-10 [A] Added config option to determine resize dimension for intermediate pictures {eenemeenemuu}
2009-07-10 [C] Added confirmation message after editing a file (thread 60096) {eenemeenemuu}
2009-07-08 [O] Added additional information for register globals (thread ID60486) {GauGau}
2009-06-23 [O] Organized & optimized update.php and added output rows for file updates {Paver}
2009-06-23 [B] Corrected label on update.php for deleting files by fixing delete function return value {Paver}
2009-06-18 [D] Added missing documentation about thumb sharpening {GauGau}